Add smartcard and SPAKE support

--- a/templates/krb5.conf.j2
+++ b/templates/krb5.conf.j2
@@ -12,15 +12,18 @@
 	permitted_enctypes = {{ auth_kerberos_enctypes }}
 	default_tkt_enctypes = {{ auth_kerberos_enctypes }}
 	default_tgs_enctypes = {{ auth_kerberos_enctypes }}
+	spake_preauth_groups = {{ auth_kerberos_curves }}
 
 [realms]
 	{{ auth_client_kerberos_realm }} = {
 		pkinit_anchors = FILE:/{{ auth_client_ca }}
-		pkinit_eku_checking = none
 {% for item in auth_client_kerberos_kdcs %}
 		pkinit_kdc_hostname = {{ item }}
 {% endfor %}
 		admin_server = {{ auth_client_kerberos_admin_servers|random }}
+{% if auth_client_kerberos_enable_smartcard %}
+		pkinit_identities = PKCS11:module_name=opensc-pkcs11.so
+{% endif %}
 	}
 
 [domain_realm]
